[package]
name = "redis-subscribe"
version = "0.1.1"
edition = "2021"
description = "Easily subscribe and unsubscribe to redis pubsub."
license = "MIT"
repository = "https://github.com/nexiumapp/redis-subscribe"
keywords = ["redis", "pubsub", "subscribe"]
categories = ["database", "network-programming", "parser-implementations"]
rust-version = "1.56"

[dependencies]
nom = "7.0.0"
tokio = { version = "1.13.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
] }
tokio-stream = "0.1.8"
async-stream = "0.3.2"
rand = "0.8.4"
tracing = "0.1"
